--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <div>This is div-container 1</div>
-    <div>This is div-container 2</div>
+    <div id="one">This is div-container 1</div>
+    <div id="two">This is div-container 2</div>
     <span>This is a span-container</span>
     <h1>This is a h1 tag.</h1>
   </body>
